<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/intro_background"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_screen_image_marginTop"
        android:src="@drawable/ic_task_image"
        android:contentDescription="@string/image_contentDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lets_get_started_text_marginTop"
        android:textSize="@dimen/lets_get_started_text_size"
        android:text="@string/let_s_get_started_text"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/intro_text_size"
        android:layout_marginTop="@dimen/intro_text_marginTop"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"/>

    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size">

    </Button>

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:background="@drawable/white_shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size">

    </Button>





</LinearLayout>